# CMakeTemplate

./: CMakeLists.txt  README.md
@small/: CMakeLists.txt
@small/src/: main.cpp
Basic/: CMAKE.md  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
Basic/cmake/: CodeGenerators.cmake  CodeGeneratorsCmake.md  DuckDB_C_CPP.cmake  Exiv2.cmake  Exiv2Cmake.md  LibSodium.cmake  LibSodiumCmake.md  LinqForCpp.cmake  LinqForCppCmake.md  alglib.cmake  alglibCmake.md  apple.cmake  appleCmake.md  boost.cmake  boostCmake.md  botan.cmake  botanCmake.md  check_all_linkable_frameworks.sh  debug.txt  dlib.cmake  dlibCmake.md  framework.cmake  frameworkCmake.md  gflags.cmake  gflagsCmake.md  glog.cmake  glogCmake.md  gmp.cmake  gmpCmake.md  gsl.cmake  gslCmake.md  install.cmake  installCmake.md  isocline.cmake  isoclineCmake.md  llama.cmake  llamaCmake.md  mpdecimal.cmake  mpdecimalCmake.md  nlohmann-jsonCmake.md  (+8 more)
Basic/cmake/JPN/: CodeGeneratorsCmake-jp.md  Exiv2Cmake-jp.md  LibSodiumCmake-jp.md  LinqForCppCmake-jp.md  alglibCmake-jp.md  appleCmake-jp.md  boostCmake-jp.md  botanCmake-jp.md  dlibCmake-jp.md  frameworkCmake-jp.md  gflagsCmake-jp.md  glogCmake-jp.md  gmpCmake-jp.md  gslCmake-jp.md  installCmake-jp.md  isoclineCmake-jp.md  llamaCmake-jp.md  mpdecimalCmake-jp.md  nlohmann-jsonCmake-jp.md  openblasCmake-jp.md  packageInstallCmake-jp.md  replxxCmake-jp.md  sqlite3Cmake-jp.md
Basic/test/: README.md  googleTest.md  test_main.cpp
